--- a/server/.htaccess
+++ b/server/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine On
 
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^([^/]+)\.png$ image.php?img=$1 [NC,L]
+RewriteRule ^([^/]+).png$ image.php?img=$1 [NC,L]
