--- a/src/xcap.csproj
+++ b/src/xcap.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DummyForm1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DummyForm1.Designer.cs">
+      <DependentUpon>DummyForm1.cs</DependentUpon>
+    </Compile>
     <Compile Include="DummyForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,11 +66,24 @@
     </Compile>
     <Compile Include="Hotkey\Constants.cs" />
     <Compile Include="Hotkey\GlobalHotkey.cs" />
+    <Compile Include="Options.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Options.Designer.cs">
+      <DependentUpon>Options.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="Snap.cs" />
+    <EmbeddedResource Include="DummyForm1.resx">
+      <DependentUpon>DummyForm1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DummyForm.resx">
       <DependentUpon>DummyForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Options.resx">
+      <DependentUpon>Options.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -87,7 +106,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="zICON.ico" />
+    <EmbeddedResource Include="zICON.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
