Update to client 2.2.0 and server 2.1.0.
Lots of bug fixes, server rewrite, lots of fun stuff.

--- a/server/.htaccess
+++ b/server/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine On
 
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^([^/]+)\.png$ image.php?img=$1 [NC,L]
+RewriteRule ^([^/]+)\.png$ index.php?act=image&var=$1 [NC,L]
